--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -8,12 +8,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=
-DB_HOST=
-DB_PORT=
-DB_DATABASE=
-DB_USERNAME=
-DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=151.106.98.0
+DB_PORT=3306
+DB_DATABASE=u504262324_ead_xsolution
+DB_USERNAME=u504262324_wolftechti
+DB_PASSWORD=Wolftech024681dias
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
